--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,9 +24,6 @@ jobs:
     - name: Fetch required Go modules
       run:  go mod download
     
-    - name: run server
-      run: go run .
-    
     - name: Unit Test
       run: go test -v ./...
 
@@ -35,4 +32,7 @@ jobs:
       with:
         push: false
         tags: ${{ github.event.repository.name }}:latest, ${{ github.repository }}:latest
+        
+    - name: Unit Test
+      run: go test -v ./...
   
